# gerard-bauzil

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  NEWS  README.md  package.xml
data/: AluminumChair.wrl  Bauzilv2.blend  Bauzilv3.blend  Bauzilv4.blend  Bauzilv4_with_floorplan.blend  Bauzilv5.blend  Bauzilv6.blend  Bauzilv6.blend1  Bauzilv6.dae  BlockStair1.wrl  BlockStair2.wrl  BlockStair3.wrl  BlockStair4.wrl  BlockStair5.wrl  CMakeLists.txt  Challenge_ICRA_2016.blend  HRP2Box-door.blend  OfficeDoor.blend  SteppingStones.blend  TVSet.blend  Table1m5h0_75m.blend  Table1m5h1m.blend  Table1mh0_75ml0_75m.blend  armoire.dae  armoire.wrl  barrier.dae  barrier.wrl  barrier_v2.dae  beam-30cm.dae  blue-column.dae  blue_column.wrl  blue_column2.wrl  blue_column3.wrl  box-steppingstones.wrl  box.dae  cylinder.dae  desktop.wrl  drawers.wrl  estrade.dae  estrade.wrl  (+38 more)
data/models_for_octomap/: Makefile  README  bauzil.blend  bauzil_50cm.blend  bauzil_freescale.blend
launch/: cardboard_box.launch  gerard_bauzil.launch  gerard_bauzil_tiago.launch  pedestal_table.launch  plank_of_wood.launch  rolling_table.launch  table_140_70_73.launch
maps/201204-gazebo/: map.pgm
maps/2021-05/: map.pgm  map.yaml
meshes/: support_apriltags_v3.stl  support_apriltags_v3_meters.stl
meshes/apriltag_36h11/: tag36_11_00001.dae  tag36_11_00002.dae  tag36_11_00003.dae  tag36_11_00004.dae  tag36_11_00005.dae  tag36_11_00006.dae  tag36_11_00010.dae  tag36_11_00011.dae  tag36_11_00012.dae  tag36_11_00013.dae  tag36_11_00014.dae  tag36_11_00015.dae  tag36_11_00020.dae  tag36_11_00021.dae  tag36_11_00022.dae  tag36_11_00023.dae  tag36_11_00030.dae  tag36_11_00031.dae  tag36_11_00032.dae  tag36_11_00033.dae  tag36_11_00040.dae  tag36_11_00041.dae  tag36_11_00042.dae  tag36_11_00043.dae  tag36_11_00050.dae  tag36_11_00051.dae  tag36_11_00052.dae  tag36_11_00053.dae  tag36_11_00060.dae  tag36_11_00061.dae  tag36_11_00062.dae  tag36_11_00063.dae  tag36_11_00100.dae  tag36_11_00101.dae  tag36_11_00102.dae  tag36_11_00103.dae  tag36_11_00104.dae  tag36_11_00105.dae  tag36_11_00106.dae  tag36_11_00107.dae  (+4 more)
meshes/driller/: BD_drill_2.dae  BD_drill_2.stl  qr_drill.stl  qr_drill_back.stl  qr_drill_top.stl
meshes/visp/: chessboard-10-7.dae
srdf/: cardboard_box.srdf  cobblestone.srdf  driller.srdf  pedestal_table.srdf  plank_of_wood.srdf  plank_of_wood1.srdf  plank_of_wood2.srdf  plank_of_wood3.srdf  plank_of_wood4.srdf  qr_drill.srdf  rolling_table.srdf  staircases_koroibot.srdf  table_140_70_73.srdf
urdf/: cardboard_box.urdf  cobblestone.urdf  cobblestone.urdf.in  driller.urdf  driller_with_qr_drill.urdf  gerard_bauzil.sdf  gerard_bauzil.urdf  pedestal_table.urdf  plank_of_wood.urdf  plank_of_wood1.urdf  plank_of_wood2.urdf  plank_of_wood3.urdf  plank_of_wood4.urdf  rolling_table.urdf  staircases_koroibot.urdf  table_140_70_73.urdf
xacro/: apriltag.xacro  driller_with_qr_drill.urdf  driller_with_qr_drill.xacro  plank_of_wood.xacro  plank_of_wood_srdf.xacro  qr_drill.xacro  support_apriltags_right_hand.xacro
