#
#  Copyright CNRS
#
#  Author: Olivier Stasse
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/cpack.cmake)

SET(PROJECT_NAME gerard_bauzil)
SET(PROJECT_DESCRIPTION "Gerard Bauzil data files")
SET(PROJECT_URL "")

SETUP_PROJECT()
ADD_SUBDIRECTORY(data)

CONFIG_FILES(urdf/cobblestone.urdf)

INSTALL(DIRECTORY urdf/
  DESTINATION share/${PROJECT_NAME}/urdf
  FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE
  PATTERN "*.urdf"
)
INSTALL(FILES ${CMAKE_BINARY_DIR}/urdf/cobblestone.urdf
  DESTINATION share/${PROJECT_NAME}/urdf
)
INSTALL(DIRECTORY xacro srdf launch meshes maps
  DESTINATION share/${PROJECT_NAME}
  FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE
)
INSTALL(FILES package.xml
  DESTINATION share/${PROJECT_NAME}/
)

SETUP_PROJECT_FINALIZE()
SETUP_PROJECT_CPACK()
